changes for login for and add style

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3922,7 +3922,7 @@ body #messages {
 }
 
 #user-login .form-item {
-  margin-bottom: 0;
+  margin-bottom: 30px;
 }
 
 .front #block-education-common-front-tutors-search .container-inline-date .form-item input {
