change user page layout

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3969,6 +3969,10 @@ body #messages {
   border: none;
 }
 
+.name-wrapper {
+  width: 100%;
+}
+
 .profile .teacher-documents .field.field-label-inline .field-items {
   float: left;
   margin-left: 20px;
