add styles for docs

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3973,6 +3973,11 @@ body #messages {
   width: 100%;
 }
 
+.profile .teacher-documents .field.field-label-inline .field-items .field-item {
+  float: LEFT;
+  margin-right: 30px;
+}
+
 .profile .teacher-documents .field.field-label-inline .field-items {
   float: left;
   margin-left: 20px;
