fix styles for login form

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3899,9 +3899,9 @@ body #messages {
 #user-login {
   width: 43%;
   margin: 0 auto;
-  background: #292929;
   padding: 41px 12px 8px 55px;
-  background-color: #2b3341;
+  border: 2px solid #eeeeee;
+  border-radius: 20px;
 }
 
 #user-login .form-item label {
