--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -3905,6 +3905,10 @@ body #messages {
   background: #e1e1e1;
 }
 
+.teacher-resume {
+  clear: both;
+}
+
 #user-login .form-item label {
   display: none;
 }
