--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4130,6 +4130,10 @@ body #messages {
       margin-bottom: 10px;
     }
 
+  .front #block-education-common-front-tutors-search #views-exposed-form-teachers-index-page {
+    width: 100%;
+  }
+
     #block-education-common-front-tutors-search .views-exposed-widget.views-submit-button .container-inline-date,
     #block-education-common-front-tutors-search .container-inline-date .form-item .form-item {
       float: left;
