--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4130,7 +4130,7 @@ body #messages {
       margin-bottom: 10px;
     }
 
-  .front #block-education-common-front-tutors-search #views-exposed-form-teachers-index-page {
+  .front #page #block-education-common-front-tutors-search #views-exposed-form-teachers-index-page {
     width: 100%;
   }
 
