--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -1736,6 +1736,7 @@ a#menu-toggle:after {
         background: #697ea4;
         width: 100%;
         margin: 0;
+        padding-bottom: 10px;
     }
 
     /* ----------------- Forms on Small Screens ------------- */
@@ -4242,7 +4243,7 @@ body #messages {
     font-weight: 500;
     padding: 10px 3px 10px 47px;
     letter-spacing: 1.6px;
-    font-size: 14px;
+    font-size: 16px;
     margin-bottom: 10px;
   }
 
