--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -522,6 +522,7 @@ h1#site-name {
     margin: 0;
     padding: 0;
     width: 100%;
+    border-top: 1px solid #d6d9de;
 }
 #main-menu-links a {
     color: #777;
@@ -1736,7 +1737,7 @@ a#menu-toggle:after {
         background: #697ea4;
         width: 100%;
         margin: 0;
-        padding-bottom: 10px;
+        /*padding-bottom: 10px;*/
     }
 
     /* ----------------- Forms on Small Screens ------------- */
@@ -4223,6 +4224,8 @@ body #messages {
 
     #main-menu-links li {
         /*padding: 10px 0 0 20px;*/
+      border-top: 1px solid #ccc;
+      margin-top: 10px;
     }
 
     #main-menu-links li.last {
@@ -4238,7 +4241,7 @@ body #messages {
   #main-menu > ul > li > a {
     text-transform: none;
     color: #fff;
-    line-height: 31px;
+    line-height: 22px;
     height: 30px;
     font-weight: 500;
     padding: 10px 3px 10px 47px;
@@ -4248,7 +4251,8 @@ body #messages {
   }
 
     #main-menu #main-menu-links li a.active, #main-menu-links li.active-trail a {
-        background: none repeat scroll 0 0 rgba(255, 255, 255, 0.8);
+      background: none !important;
+      text-decoration: none;
     }
 
     #logo, #secondary-menu{
