--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4350,4 +4350,20 @@ body #messages {
   .not-front #block-education-tutor-form-tutor-registation #edit-account input {
     width: 100%;
   }
+
+  .not-front #block-education-tutor-form-tutor-registation #edit-account input#edit-mail {
+    margin: 20px 0;
+  }
+
+  #block-education-tutor-form-tutor-registation .form-actions {
+    float: none;
+    margin: 0;
+  }
+
+  .not-front #block-education-tutor-form-tutor-registation input.form-submit {
+    padding: 11px 24px 12px;
+    width: 100%;
+    box-sizing: border-box;
+    float: none;
+  }
 }
