--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4386,4 +4386,9 @@ body #messages {
     margin-left: 6%;
     width: 87%;
   }
+
+  .b-main__jumbotron-form__next_steps__group p {
+    margin: 1em 0;
+    padding: 0.5em 0.1em;
+  }
 }
