add block style

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4073,6 +4073,10 @@ body #messages {
   width: 100%;
 }
 
+#block-education-common-front-video {
+  margin-top: 20px;
+}
+
 .container-video {
   position: relative;
   overflow: hidden;
