add block style

--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4075,6 +4075,7 @@ body #messages {
 
 #block-education-common-front-video {
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .container-video {
