--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -522,7 +522,7 @@ h1#site-name {
     margin: 0;
     padding: 0;
     width: 100%;
-    border-top: 1px solid #d6d9de;
+   /* border-top: 1px solid #d6d9de;*/
 }
 #main-menu-links a {
     color: #777;
@@ -4096,6 +4096,13 @@ body #messages {
   height: 100%;
 }
 
+.front #content .section {
+  padding: 0;
+}
+
+.front #main{
+  max-width: inherit;
+}
 
 @media all and (max-width: 768px) {
 
