--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4078,11 +4078,22 @@ body #messages {
   margin-bottom: 20px;
 }
 
-.container-video {
+/*.container-video {
   position: relative;
   overflow: hidden;
   width: 100%;
-  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+  padding-top: 56.25%;
+}
+*/
+
+.container-video {
+  position: relative;
+  overflow: hidden;
+  width: 50%;
+  padding-top: 28.25%;
+  height: auto;
+  float: left;
+  margin-right: 30px;
 }
 
 /* Then style the iframe to fit in the container div with full height and width */
@@ -4094,6 +4105,11 @@ body #messages {
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+#block-education-common-front-video .content {
+  font-size: 20px;
+  line-height: 32px;
 }
 
 .front #content .section {
@@ -4210,7 +4226,7 @@ body #messages {
     margin-bottom: 0;
   }
   */
-   
+
 
     #block-education-common-front-tutors-search .views-exposed-widget.views-submit-button .container-inline-date,
     #block-education-common-front-tutors-search .container-inline-date .form-item .form-item {
