--- a/sites/all/themes/education/css/style.css
+++ b/sites/all/themes/education/css/style.css
@@ -4127,6 +4127,14 @@ body #messages {
   vertical-align: baseline;
 }
 
+.field-name-body textarea.form-textarea {
+  height: auto;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -o-border-radius: 10px;
+  border-radius: 10px;
+}
+
 @media all and (max-width: 768px) {
 
   #user-login {
